@@ -1,3 +1,7 @@
+2005-03-22  Andras Varga
+
+	* tkapp.cc/h: handling of -h option moved into TOmnetApp base class.
+
 2005-03-19  Andras Varga
 
 	* gate inspector dialog revised (connection display string made 
