@@ -1,3 +1,7 @@
+2005-03-22  Andras Varga
+
+	* cmdenv.cc/h: handling of -h option moved into TOmnetApp base class.
+
 2005-03-02  Andras Varga
 
 	* cmdenv.h/cc: makeOptionsEffective() merged into readPerRunOptions()
